[tool.poetry]
name = "temporal-odyssey"
version = "0.1.0"
description = "A reinforcement learning environment for AI safety research and agent development."
authors = ["Shalini Ananda <shalini@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ShaliniAnandaPhD/Temporal-Odyssey"
repository = "https://github.com/ShaliniAnandaPhD/Temporal-Odyssey"
keywords = ["AI", "reinforcement learning", "AI safety", "simulation"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
torch = "^1.7.0"
gym = "^0.18.0"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
scipy = "^1.5.2"
pyyaml = "^5.3.1"
tqdm = "^4.50.2"
tensorflow = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"
sphinx = "^3.2.1"
pytest-cov = "^2.10.1"
tox = "^3.20.1"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  ".tox",
  ".eggs",
  "*.egg-info",
  "temporal_odyssey/tests/*",
  "temporal_odyssey/ui/*",
  "temporal_odyssey/envs/advanced_environment.py"
]
ignore = [
  "E203",  # Whitespace before ':'
  "E266",  # Too many leading '#' for block comment
  "E501",  # Line length (handled by max-line-length)
  "W503"   # Line break before binary operator
]

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.sphinx]
project = "Temporal Odyssey"
author = "Shalini Ananda"
version = "0.1.0"
release = "0.1.0"

[coverage:run]
branch = True
source = ["temporal_odyssey"]
